# linkforeman

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
src/: cli.rs  config.rs  main.rs  status.rs
src/status/: tree.rs
