[package]
name = "linkforeman"
version = "0.1.0"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"
description = "Simple application to keep track of your config symlinks."
repository = "https://github.com/pustaczek/linkforeman"
license = "MPL-2.0"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.32"
clap = "=3.0.0-beta.1"
dirs = "3.0.1"
serde = { version = "1.0.115", features = ["derive"] }
toml = "0.5.6"
