[package]
name = "linkforeman"
version = "0.1.1"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"
description = "Simple application to keep track of your config symlinks."
repository = "https://github.com/pustaczek/linkforeman"
license = "MPL-2.0"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
walkdir = "2.3"
